final: User Service complete (validation, tests, caching, coverage, CI)